优化service的注释说明